...
    [isExpense],
  );

  return (
    <View testID={`transaction-item-${id}`} style={cardStyle}>
      <View style={styles.textBlock}>
        <Text testID="transaction-item-description" style={titleStyle}>{description}</Text>
        <Text style={dateStyle}>{formattedDate}</Text>
      </View>
      <View style={styles.buttons}>
        <Text testID="transaction-item-amount" style={amountStyle}>{formattedAmount}</Text>
        <TouchableOpacity testID="button-delete" onPress={handleDelete} style={styles.deleteButton}>
          <Text style={styles.deleteButtonText}>Delete</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
};
...
