...
    hasTransactions: boolean;
    suggestions: Record<'income' | 'expense', string[]>;
  }) => (
    <>
      <View style={styles.header}>
        <Text
          testID="app-title"
          style={[
            styles.title,
            {color: getColor(Colors.text.primary, isDarkMode)},
          ]}>
          Cashlog
        </Text>
...
  return (
    <SafeAreaView style={backgroundStyle}>
      <View style={styles.screen}>
        <StatusBar barStyle={isDarkMode ? 'light-content' : 'dark-content'} />

        <FlatList
          testID="transaction-list"
          data={expenses}
          renderItem={renderItem}
          keyExtractor={keyExtractor}
          keyboardShouldPersistTaps="handled"
          ListHeaderComponent={listHeaderComponent}
          ListEmptyComponent={emptyComponent}
...
